finished list component added search tool added no results message added normalize util

--- a/src/config/translations/en/translation.json
+++ b/src/config/translations/en/translation.json
@@ -1,5 +1,7 @@
 {
   "list": {
-    "author": "Author"
+    "author": "Author",
+    "placeholder": "Filter Podcasts...",
+    "noResults": "No Podcasts found"
   }
 }
