added header fixed some scss fixed translation layout is now a param of the router so it can have <Link> compo

--- a/src/config/translations/en/translation.json
+++ b/src/config/translations/en/translation.json
@@ -4,5 +4,5 @@
     "placeholder": "Filter Podcasts...",
     "noResults": "No Podcasts found"
   },
-  "title": "Podcasts"
+  "title": "Podcaster"
 }
