--- a/src/config/translations/en/translation.json
+++ b/src/config/translations/en/translation.json
@@ -14,6 +14,7 @@
   "table": {
     "title": "Title",
     "date": "Date",
-    "duration": "Duration"
+    "duration": "Duration",
+    "unknown": "Unknown"
   }
 }
